# SafeTypes

./: .gitignore  CMakeLists.txt  types.cpp
src/: base.cpp  boolean.cpp  common.cpp  decimals.cpp  integers.cpp  type_traits.cpp  types.cpp
tests/: CMakeLists.txt  test_boolean.cpp  test_decimal.cpp  test_integer.cpp
